--- a/CSS/style.css
+++ b/CSS/style.css
@@ -176,7 +176,7 @@ main {
 
 /* Awal aktifkan lapisan pertama */
 .title::before {
-  background-image: url(img/pandawa.png);
+  background-image: url('img/pandawa.png');
   opacity: 1;
 }
 
